syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option csharp_namespace = "CompetitionViewer.gRpc";

package raceevents;

service RaceStreamer {
  rpc GetStream (google.protobuf.Empty) returns (stream RaceEvent);
}

// The response message containing the greetings.
message RaceEvent {
  google.protobuf.Timestamp timestamp = 1;
  string eventId = 2;
  string raceId = 3;
  string round = 4;

  repeated RaceData raceResults = 5;

  message RaceData {
    string racerId = 1;
    RaceResult result = 2;
    google.protobuf.Int32Value lanePosition = 3;
    google.protobuf.Duration dialIn = 4;
    google.protobuf.Duration reactionTime = 5;
    google.protobuf.Duration sixtyFeetTime = 6;
    google.protobuf.Duration threeThirtyFeetTime = 7;
    google.protobuf.Duration sixSixtyFeetTime = 8;
    google.protobuf.DoubleValue sixSixtyFeetSpeed = 9;
    google.protobuf.Duration thousandFeetTime = 10;
    google.protobuf.DoubleValue thousandFeetSpeed = 11;
    google.protobuf.Duration finishTime = 12;
    google.protobuf.DoubleValue finishSpeed = 13;

    enum RaceResult {
      Invalid = 0;
      Winner = 1;
      RunnerUp = 2;
    }
  }
}
